overflowing title text fix

--- a/user/themes/euro/css/style.css
+++ b/user/themes/euro/css/style.css
@@ -430,7 +430,7 @@ body {
 	height: 109px;
 	width: 326px;
 	margin: 15px 0 26px 5px;
-	text-indent: -1000px;
+	text-indent: -9999px;
 	background: url('../img/logo-normal.png') -10px 0 no-repeat;
 	outline: none;
 }
